--- a/CheckersGame/CheckersGame/View/LoadGameWindow.xaml
+++ b/CheckersGame/CheckersGame/View/LoadGameWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="CheckersGame.View.GameWindow"
+﻿<Window x:Class="CheckersGame.View.LoadGameWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,17 +6,15 @@
         xmlns:local="clr-namespace:CheckersGame.View"
         xmlns:vm="clr-namespace:CheckersGame.ViewModel"
         mc:Ignorable="d"
-        Title="Checkers" Height="720" Width="1280"
+        Title="LoadGameWindow" Height="600" Width="500"
         WindowStartupLocation="CenterScreen"
         ResizeMode="CanMinimize">
-    
+
     <Window.DataContext>
-        <vm:GameVM/>
+        <vm:LoadGameVM/>
     </Window.DataContext>
-    
+
     <Grid>
-        
-        
         
     </Grid>
     
