--- a/CheckersGame/CheckersGame/View/MenuWindow.xaml
+++ b/CheckersGame/CheckersGame/View/MenuWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:behavior="clr-namespace:AttachedCommandBehavior;assembly=AttachedCommandBehavior"
         xmlns:vm="clr-namespace:CheckersGame.ViewModel"
         mc:Ignorable="d"
-        Title="MenuWindow" Height="720" Width="1280"
+        Title="Menu" Height="720" Width="1280"
         WindowStartupLocation="CenterScreen"
         ResizeMode="CanMinimize">
 
@@ -18,15 +18,15 @@
     <Grid>
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="420"/>
-            <ColumnDefinition Width="860"/>
+            <ColumnDefinition Width="350"/>
+            <ColumnDefinition Width="930"/>
         </Grid.ColumnDefinitions>
 
         <StackPanel
             Grid.Column="0"
             HorizontalAlignment="Center"
             VerticalAlignment="Center"
-            Margin="0,0,100,150">
+            Margin="0,0,0,150">
 
             <Button
                 Content="New Game"
@@ -43,13 +43,6 @@
                 />
 
             <Button
-                Content="Custom Game"
-                Margin="10"
-                FontSize="30"
-                Command="{Binding CustomGameCommand}"
-                />
-
-            <Button
                 Content="How to play"
                 Margin="10"
                 FontSize="30"
@@ -61,6 +54,13 @@
                 Margin="10"
                 FontSize="30"
                 Command="{Binding SettingsCommand}"
+                />
+
+            <Button
+                Content="Statistics"
+                Margin="10"
+                FontSize="30"
+                Command="{Binding CreditsCommand}"
                 />
 
             <Button
