Added windows for statistics, setting and credits and added functionality for the last menu buttons

--- a/CheckersGame/CheckersGame/View/MenuWindow.xaml
+++ b/CheckersGame/CheckersGame/View/MenuWindow.xaml
@@ -60,7 +60,7 @@
                 Content="Statistics"
                 Margin="10"
                 FontSize="30"
-                Command="{Binding CreditsCommand}"
+                Command="{Binding StatisticsCommand}"
                 />
 
             <Button
