Added model for piece and functionality in gamemodel

--- a/CheckersGame/CheckersGame/View/GameWindow.xaml
+++ b/CheckersGame/CheckersGame/View/GameWindow.xaml
@@ -15,9 +15,14 @@
     </Window.DataContext>
     
     <Grid>
-        
-        
-        
+
+        <ItemsControl
+            ItemsSource="{Binding Board}"
+            VerticalAlignment="Center"
+            HorizontalAlignment="Center">
+            
+        </ItemsControl>
+
     </Grid>
     
 </Window>
