--- a/CheckersGame/CheckersGame/View/MenuWindow.xaml
+++ b/CheckersGame/CheckersGame/View/MenuWindow.xaml
@@ -32,6 +32,7 @@
                 Content="New Game"
                 Margin="10"
                 FontSize="30"
+                BorderBrush="{Binding MyTheme.NormalBorderColor}"
                 Command="{Binding NewGameCommand}"
                 />
 
