Added possibility to lock the option for multiple jump when in a game

--- a/CheckersGame/CheckersGame/View/SettingsWindow.xaml
+++ b/CheckersGame/CheckersGame/View/SettingsWindow.xaml
@@ -35,7 +35,8 @@
 
                     <Viewbox Height="{Binding Path=ActualHeight, ElementName=StackPanel1}">
                         <CheckBox 
-                            IsChecked="{Binding IsCheckBoxChecked}"/>
+                            IsChecked="{Binding IsCheckBoxChecked}"
+                            IsEnabled="{Binding IsCheckBoxEnabled}"/>
                     </Viewbox>
 
                 </StackPanel>
